--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#tips">Tips</a></li>
             </ul>
         </nav>
-        <img src="https://images.pexels.com/photos/4340676/pexels-photo-4340676.jpeg" alt="An apple pie on a counter with sugar sprinkled on top" width="1495">
+        <img src="https://freerangestock.com/sample/151579/a-pie-with-apples-on-top.jpg" alt="An apple pie on a counter with sugar sprinkled on top" width="1495">
     </header>
 
     <main>
