--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Homemade Apple Pie Recipe – Easy & Delicious!</title>
     <link rel="stylesheet" href="Styles/styles.css">
-    <link rel="icon" href="https://images.icon-icons.com/224/PNG/512/Cake_25712.png" type="jpg/png">
+    <link rel="icon" href="https://images.pexels.com/photos/5840164/pexels-photo-5840164.jpeg" type="jpg/png">
 </head>
 
 <body>
